[tool.poetry]
name = "Imagebot"
version = "0.1.0"
description = ""
authors = ["RLX <contactrlxop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
google-api-python-client = "^2.12.0"
Flask = "^2.0.1"
discord-py-slash-command = "^3.0.3"
pyfiglet = "^0.8.post1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
